[総勘定元帳] 各行に対応する仕訳へのリンクを設置

--- a/app/views/general_ledgers/show.html.erb
+++ b/app/views/general_ledgers/show.html.erb
@@ -44,6 +44,14 @@
                   <td class="border-r">
                     <div class="w-full h-full py-2 text-center">
                       <%= number_to_currency(debit_line&.amount, unit: "¥", precision: 0, delimiter: ",") %>
+                      <% if debit_line %>
+                        <a href="<%= edit_journal_entry_path(debit_line.entry_id) %>" aria-label="仕訳帳" target="_blank">
+                          <!-- https://heroicons.com/ -->
+                          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
+                          </svg>
+                        </a>
+                      <% end %>
                     </div>
                   </td>
                   <td class="border-l">
@@ -59,6 +67,14 @@
                   <td>
                     <div class="w-full h-full py-2 text-center">
                       <%= number_to_currency(credit_line&.amount, unit: "¥", precision: 0, delimiter: ",") %>
+                      <% if credit_line %>
+                        <a href="<%= edit_journal_entry_path(credit_line.entry_id) %>" aria-label="仕訳帳" target="_blank">
+                          <!-- https://heroicons.com/ -->
+                          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
+                          </svg>
+                        </a>
+                      <% end %>
                     </div>
                   </td>
                 </tr>
