--- a/app/views/general_ledgers/show.html.erb
+++ b/app/views/general_ledgers/show.html.erb
@@ -1,14 +1,20 @@
-<div class="max-w-6xl min-w-2xs sm:min-w-2xl mx-auto min-h-screen">
+<div class="font-mono max-w-6xl min-w-2xs sm:min-w-2xl mx-auto min-h-screen">
   <div class="bg-white border-4 border-black shadow-2xl">
     <div class="bg-gray-100 px-8 py-6 border-b-4 border-black flex justify-between items-center">
-      <h1 class="text-3xl font-mono tracking-wide">総勘定元帳</h1>
+      <h1 class="text-3xl tracking-wide">総勘定元帳</h1>
     </div>
 
-    <p class="font-mono font-bold text-center m-4"><%= @from.strftime('%Y年%m月%d日') %> ~ <%= @to.strftime('%Y年%m月%d日') %></p>
+    <p class="font-bold text-center m-4"><%= @from.strftime('%Y年%m月%d日') %> ~ <%= @to.strftime('%Y年%m月%d日') %></p>
     <div class="p-8 space-y-2">
+      <% if @gl.account_tables.empty? %>
+        <div class="text-center">
+          仕訳が登録されていません
+        </div>
+      <% end %>
+
       <% @gl.account_tables.each do |account_name, account_table| %>
         <div>
-          <h2 class="text-2xl font-mono tracking-wide mb-4 border-b-2 border-black pb-2 text-center"><%= account_name %></h2>
+          <h2 class="text-2xl tracking-wide mb-4 border-b-2 border-black pb-2 text-center"><%= account_name %></h2>
           <table class="w-full border-collapse border-2 mb-4">
             <colgroup>
               <col span="3" class="w-1/6">
