--- a/app/views/general_ledgers/show.html.erb
+++ b/app/views/general_ledgers/show.html.erb
@@ -50,7 +50,7 @@
                   <td class="border-r">
                     <div class="w-full h-full py-2 text-center">
                       <%= number_to_currency(debit_line&.amount, unit: "¥", precision: 0, delimiter: ",") %>
-                      <% if debit_line %>
+                      <% if debit_line && debit_line.entry_id %>
                         <a href="<%= edit_journal_entry_path(debit_line.entry_id) %>" aria-label="仕訳帳" target="_blank">
                           <!-- https://heroicons.com/ -->
                           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
@@ -73,7 +73,7 @@
                   <td>
                     <div class="w-full h-full py-2 text-center">
                       <%= number_to_currency(credit_line&.amount, unit: "¥", precision: 0, delimiter: ",") %>
-                      <% if credit_line %>
+                      <% if credit_line && credit_line.entry_id %>
                         <a href="<%= edit_journal_entry_path(credit_line.entry_id) %>" aria-label="仕訳帳" target="_blank">
                           <!-- https://heroicons.com/ -->
                           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
