--- a/app/views/general_ledgers/show.html.erb
+++ b/app/views/general_ledgers/show.html.erb
@@ -14,7 +14,7 @@
 
       <% @gl.account_tables.each do |account_name, account_table| %>
         <div>
-          <h2 class="text-2xl tracking-wide mb-4 border-b-2 border-black pb-2 text-center"><%= account_name %></h2>
+          <h2 class="text-2xl tracking-wide mb-4 text-center"><%= account_name %></h2>
           <table class="w-full border-collapse border-2 mb-4">
             <colgroup>
               <col span="3" class="w-1/6">
