--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -26,8 +26,12 @@
             </div>
           </div>
           <button popovertarget="user-profile-menu"
+            aria-label="ユーザープロフィールメニュー"
             class="tracking-wide text-black hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all cursor-pointer">
-            プロフィール
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+            </svg>
+
           </button>
           <div id="user-profile-menu" popover>
             <div class="flex flex-col py-2 border-2 border-black">
