--- a/app/views/general_ledgers/show.html.erb
+++ b/app/views/general_ledgers/show.html.erb
@@ -50,13 +50,19 @@
                   <td class="border-r">
                     <div class="w-full h-full py-2 pr-2 text-right">
                       <%= number_to_currency(debit_line&.amount, unit: "", precision: 0, delimiter: ",") %>
-                      <% if debit_line && debit_line.entry_id %>
-                        <a href="<%= edit_journal_entry_path(debit_line.entry_id) %>" aria-label="仕訳帳" target="_blank">
-                          <!-- https://heroicons.com/ -->
+                      <% if debit_line %>
+                        <% if debit_line.entry_id %>
+                          <a href="<%= edit_journal_entry_path(debit_line.entry_id) %>" aria-label="仕訳帳" target="_blank">
+                            <!-- https://heroicons.com/ -->
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
+                              <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
+                            </svg>
+                          </a>
+                        <% else %>
                           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
                           </svg>
-                        </a>
+                        <% end %>
                       <% end %>
                     </div>
                   </td>
@@ -73,13 +79,19 @@
                   <td>
                     <div class="w-full h-full py-2 pr-2 text-right">
                       <%= number_to_currency(credit_line&.amount, unit: "", precision: 0, delimiter: ",") %>
-                      <% if credit_line && credit_line.entry_id %>
-                        <a href="<%= edit_journal_entry_path(credit_line.entry_id) %>" aria-label="仕訳帳" target="_blank">
-                          <!-- https://heroicons.com/ -->
+                      <% if credit_line %>
+                        <% if credit_line.entry_id %>
+                          <a href="<%= edit_journal_entry_path(credit_line.entry_id) %>" aria-label="仕訳帳" target="_blank">
+                            <!-- https://heroicons.com/ -->
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
+                              <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
+                            </svg>
+                          </a>
+                        <% else %>
                           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
                           </svg>
-                        </a>
+                        <% end %>
                       <% end %>
                     </div>
                   </td>
