--- a/app/views/financial_closings/statements/show.html.erb
+++ b/app/views/financial_closings/statements/show.html.erb
@@ -1,7 +1,7 @@
 <div class="max-w-6xl mx-auto min-h-screen">
   <div class="bg-white border-4 border-black shadow-2xl">
     <div class="bg-gray-100 px-8 py-6 border-b-4 border-black flex justify-between items-center">
-      <h1 class="text-3xl font-mono tracking-wide">損益計算書</h1>
+      <h1 class="text-3xl font-mono tracking-wide">財務諸表</h1>
     </div>
 
     <p class="font-mono font-bold text-center m-4"><%= @start_date.strftime('%Y年%m月%d日') %> ~ <%= @end_date.strftime('%Y年%m月%d日') %></p>
