--- a/app/views/financial_closings/statements/show.html.erb
+++ b/app/views/financial_closings/statements/show.html.erb
@@ -1,13 +1,13 @@
-<div class="max-w-6xl min-w-2xs sm:min-w-2xl md:min-w-3xl mx-auto min-h-screen">
+<div class="font-mono max-w-6xl min-w-2xs sm:min-w-2xl md:min-w-3xl mx-auto min-h-screen">
   <div class="bg-white border-4 border-black shadow-2xl">
     <div class="bg-gray-100 px-8 py-6 border-b-4 border-black flex justify-between items-center">
-      <h1 class="text-3xl font-mono tracking-wide">財務諸表</h1>
+      <h1 class="text-3xl tracking-wide">財務諸表</h1>
     </div>
 
-    <p class="font-mono font-bold text-center m-4"><%= @start_date.strftime('%Y年%m月%d日') %> ~ <%= @end_date.strftime('%Y年%m月%d日') %></p>
+    <p class="font-bold text-center m-4"><%= @start_date.strftime('%Y年%m月%d日') %> ~ <%= @end_date.strftime('%Y年%m月%d日') %></p>
 
     <div class="px-8 pb-8">
-      <h2 class="text-2xl font-mono tracking-wide mb-4 text-center">貸借対照表</h2>
+      <h2 class="text-2xl tracking-wide mb-4 text-center">貸借対照表</h2>
       <table class="w-full border-collapse border-2 mb-8">
         <colgroup>
           <col class="w-2/6">
@@ -73,7 +73,7 @@
         </tr>
       </table>
 
-      <h2 class="text-2xl font-mono tracking-wide mb-4 text-center">損益計算書</h2>
+      <h2 class="text-2xl tracking-wide mb-4 text-center">損益計算書</h2>
       <table class="w-full border-collapse border-2 mb-4">
         <colgroup>
           <col class="w-2/6">
