--- a/app/views/financial_closings/statements/show.html.erb
+++ b/app/views/financial_closings/statements/show.html.erb
@@ -31,7 +31,7 @@
             </td>
             <td class="border-r">
               <div class="w-full h-full py-2 pr-2 text-right">
-                <%= number_to_currency(debit_line[1], unit: "", precision: 0, delimiter: ",") %>
+                <%= format_amount(debit_line[1]) %>
               </div>
             </td>
           <% else %>
@@ -46,7 +46,7 @@
             </td>
             <td>
               <div class="w-full h-full py-2 pr-2 text-right">
-                <%= number_to_currency(credit_line[1], unit: "", precision: 0, delimiter: ",") %>
+                <%= format_amount(credit_line[1]) %>
               </div>
             </td>
           <% else %>
@@ -61,13 +61,13 @@
           <td />
           <td class="border-r">
             <div class="w-full h-full py-2 pr-2 text-right">
-              <%= number_to_currency(@balance_sheet.total_assets, unit: "", precision: 0, delimiter: ",") %>
+              <%= format_amount(@balance_sheet.total_assets) %>
             </div>
           </td>
           <td class="border-l" />
           <td>
             <div class="w-full h-full py-2 pr-2 text-right">
-              <%= number_to_currency(@balance_sheet.total_liabilities + @balance_sheet.total_equity, unit: "", precision: 0, delimiter: ",") %>
+              <%= format_amount(@balance_sheet.total_liabilities + @balance_sheet.total_equity) %>
             </div>
           </td>
         </tr>
@@ -97,7 +97,7 @@
             </td>
             <td class="border-r">
               <div class="w-full h-full py-2 pr-2 text-right">
-                <%= number_to_currency(debit_line[1], unit: "", precision: 0, delimiter: ",") %>
+                <%= format_amount(debit_line[1]) %>
               </div>
             </td>
           <% else %>
@@ -112,7 +112,7 @@
             </td>
             <td>
               <div class="w-full h-full py-2 pr-2 text-right">
-                <%= number_to_currency(credit_line[1], unit: "", precision: 0, delimiter: ",") %>
+                <%= format_amount(credit_line[1]) %>
               </div>
             </td>
           <% else %>
@@ -127,13 +127,13 @@
           <td />
           <td class="border-r">
             <div class="w-full h-full py-2 pr-2 text-right">
-              <%= number_to_currency(@pl_total_debit, unit: "", precision: 0, delimiter: ",") %>
+              <%= format_amount(@pl_total_debit) %>
             </div>
           </td>
           <td class="border-l" />
           <td>
             <div class="w-full h-full py-2 pr-2 text-right">
-              <%= number_to_currency(@pl_total_credit, unit: "", precision: 0, delimiter: ",") %>
+              <%= format_amount(@pl_total_credit) %>
             </div>
           </td>
         </tr>
